Fix searchbar options not visible and autofocus input

--- a/apps/readest-app/src/styles/globals.css
+++ b/apps/readest-app/src/styles/globals.css
@@ -15,22 +15,23 @@
   }
 }
 
-html[data-page="default"] {
+html[data-page='default'] {
   background: #ffffff;
 }
 
-html[data-page="library"] {
+html[data-page='library'] {
   background: theme('colors.base-200');
 }
 
-html[data-page="reader"] {
+html[data-page='reader'] {
   background: theme('colors.base-100');
 }
 
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial,
+    sans-serif;
   border-radius: 10px;
   background-color: transparent;
 }
@@ -175,7 +176,7 @@ foliate-view {
 .search-bar {
   max-height: 0;
   visibility: hidden;
-  overflow: hidden;
+  overflow: visible;
   transition: max-height 0.3s ease-out;
 }
 
